# elitebox

./: .gitignore  Cargo.toml  README.md  kimi.md
src/: main.rs
src/alsa/: device.rs  mod.rs  sw_params.rs
src/gui/: mod.rs
src/player/: bitperfect.rs  gapless.rs  mod.rs
src/rt/: mod.rs
